# fisher_exact

./: .gitignore  Cargo.toml  LICENSE  README.md  README.rst
fisher_exact/: __init__.py  backend.py
src/: lib.rs
tests/: test_fisher_exact.py  test_fisher_exact_benchmark.py
