[package]
name = "fisher-exact"
version = "0.0.1"
authors = ["vlada.kunc@gmail.com"]
edition = "2018"

[lib]
name = "fisher_exact"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
approx = ">=0.4.0"
fishers_exact = ">=1.0.1"

[package.metadata.maturin]
requires-dist = ["numpy>=1.11.0"]
classifiers = ["Programming Language :: Python",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               "Programming Language :: Rust"]